# RouterController

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.bak
components/ble_config/: CMakeLists.txt  ble_advertising_data.c  ble_advertising_params.c  ble_routercontroller_profile.c  ble_statemanager.c
components/ble_config/include/: ble_appprofile.h  ble_config.h
components/ble_device/: CMakeLists.txt  ble_device.c
components/ble_device/include/: ble_device.h
components/ble_gatt_server_infra/: CMakeLists.txt  ble_gatt_server_infra.c  ble_gatt_server_infra.h  ble_gatt_utils.c
components/ble_gatt_server_infra/ble_advertising_infra/: ble_advertising_infra.c  ble_advertising_infra.h
components/ble_gatt_server_infra/gap_event_handler/: gap_event_handler.c  gap_event_handler.h
components/ble_gatt_server_infra/gatt_event_handler/: gatt_characteristic_definition.h  gatt_characteristic_descriptor_definition.h  gatt_event_handler.c  gatt_event_handler.h  gatt_profile_definition.h
components/ble_gatt_server_infra/include/: ble_gatt_characteristic.h  ble_gatt_descriptor.h  ble_gatt_profile.h  ble_gatt_server_infra.h  ble_gatt_utils.h
components/ble_gatt_server_infra/infra_advertising/: infra_advertising.c  infra_advertising.h
components/ble_gatt_server_infra/infra_gap_event_handling/: gap_event_handler.c  gap_event_handler.h
components/ble_gatt_server_infra/infra_gap_event_handling/gap_advertising/: gap_advertising.c  gap_advertising.h
components/ble_gatt_server_infra/infra_gatt_event_handling/: gatt_event_handler.c  gatt_event_handler.h
components/ble_gatt_server_infra/infra_gatt_event_handling/gatt_read_event_handlers/: gatt_read.c  gatt_read.h
components/ble_gatt_server_infra/infra_gatt_event_handling/gatt_registration_event_handlers/: gatt_profile_registration.c  gatt_profile_registration.h  gatt_profile_registration_macros.h
components/bluetooth_server/: CMakeLists.txt  bluetooth_server.c  gap_handling.c  gatt_handling.c
components/bluetooth_server/include/: ble_advertising_params.h  bluetooth_server.h  gap_handling.h  gatt_handling.h
components/device_configuration/: CMakeLists.txt  ble_advertising_configuration.c  gatt_profiles_configuration.c
components/device_configuration/advertising/: ble_advertising_configuration.c
components/device_configuration/gatt_profiles/: router_controller_profile.c
components/device_configuration/gatt_profiles/controller_profile/: controller_profile.c  height_characteristic.c
components/device_configuration/gatt_profiles/controller_profile/include/: controller_profile.h  height_characteristic.h
components/device_configuration/gatt_profiles/include/: router_controller_profile.h
documentation/: ble_gatt_server_infra.excalidraw
main/: CMakeLists.txt  main.c
