idf_component_register(
    SRCS
        "ble_gatt_server_infra.c"
        "infra_advertising/infra_advertising.c"
        "infra_gap_event_handling/gap_event_handler.c"
        "infra_gatt_event_handling/gatt_event_handler.c"
    INCLUDE_DIRS
        "."
        "include"
        "infra_advertising"
        "infra_gap_event_handling"
        "infra_gatt_event_handling"
    REQUIRES
        bt
)
